-- this file is a script that creates
-- tables with the requested struct

CREATE TABLE users (
	id CHAR(36) PRIMARY KEY,
	first_name VARCHAR(255),
	last_name VARCHAR(255),
	email VARCHAR(255) UNIQUE,
	password VARCHAR(255),
	is_admin BOOLEAN DEFAULT FALSE
);

CREATE TABLE place (
	id CHAR(36) PRIMARY KEY,
	title VARCHAR(255),
	description TEXT,
	price DECIMAL(10, 2),
	latitude FLOAT,
	longitude FLOAT,
	owner_id CHAR(36),
	FOREIGN KEY (owner_id) REFERENCES users(id)
);

CREATE TABLE review (
	id CHAR(36) PRIMARY KEY,
	text TEXT,
	rating INT CHECK (rating >= 1 AND rating <= 5),
	user_id CHAR(36),
	place_id CHAR(36),
	UNIQUE (user_id, place_id),
	FOREIGN KEY (user_id) REFERENCES users(id),
	FOREIGN KEY (place_id) REFERENCES place(id)
);

CREATE TABLE amenity (
	id CHAR(36) PRIMARY KEY,
	name VARCHAR(255) UNIQUE
);

CREATE TABLE place_amenity (
	place_id CHAR(36),
	amenity_id CHAR(36),
	PRIMARY KEY (place_id, amenity_id),
	FOREIGN KEY (place_id) REFERENCES place(id),
	FOREIGN KEY (amenity_id) REFERENCES amenity(id)
);